<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loading">Your widget is loading&#8230;</string>
    <string name="app_name">Binary Clock</string>

    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="empty">Empty</string>

    <string name="background_title">Background</string>
    <string name="background_summary">Pick color you like</string>

    <string name="compact_title">Pure binary notation</string>
    <string name="compactOn_summary">Each number is a column</string>
    <string name="compactOff_summary">Each digit is a column</string>
    
    <string name="menu_done">Done</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="color_picker_title">Choose dots color</string>
</resources>